[package]
name = "testtx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
simplicity = { package = "simplicity-lang", version = "0.3.0" }
elements-miniscript = { version = "0.4", path = "..", features = [ "serde", "simplicity" ] }

[[bin]]
name = "testtx"
path = "src/main.rs"


